--- a/utils/sugar1/src/scss/core/_all.scss
+++ b/utils/sugar1/src/scss/core/_all.scss
@@ -1,7 +1,9 @@
 //
 // Imports core
 //
+@import 'imports';
 @import 'variables';
+@import 'utils/all';
 @import 'functions/all';
 @import 'mixins/all';
 @import 'helper-classes';
