--- a/utils/sugar1/src/scss/math/_all.scss
+++ b/utils/sugar1/src/scss/math/_all.scss
@@ -6,8 +6,10 @@
 @import 'math-convert-angle';
 @import 'math-cos';
 @import 'math-deg';
+@import 'math-even';
 @import 'math-fact';
 @import 'math-grad';
+@import 'math-odd';
 @import 'math-percentage';
 @import 'math-pow';
 @import 'math-rad';
