--- a/utils/sugar1/src/scss/mixins/_all.scss
+++ b/utils/sugar1/src/scss/mixins/_all.scss
@@ -1,21 +1,21 @@
 @import "background";
-// @import "border-radius";
-// @import "center-block";
+@import "border-radius";
+@import "center-block";
 @import "clearfix";
-// @import "coffeekraken-logo";
-// @import "columns";
+@import "coffeekraken-logo";
+@import "columns";
 @import "corner";
-// @import "fit";
+@import "fit";
 @import "text-hide";
-// @import "icon";
-// @import "image-rendering";
-// @import "list-bullet";
-// @import "list";
+@import "icon";
+@import "input-placeholder";
+@import "image-rendering";
+@import "list-bullet";
+@import "list";
 @import "media";
-// @import "placeholder";
-// @import "position";
+@import "position";
 @import "ratio";
-// @import "register-base64-icon";
+@import "register-svg-icon";
 @import "visually-hidden";
 @import "reset";
 // @import "rhythm-width";
