--- a/utils/sugar1/src/scss/mixins/_ratio.scss
+++ b/utils/sugar1/src/scss/mixins/_ratio.scss
@@ -1,4 +1,5 @@
 /**
+ * @name    ratio
  * Apply a ratio css styling. This will apply a before or after content that will make the element keep the specified ratio.
  * The content need to be displayed as absolute top left and fit in size.
  *
