--- a/utils/sugar1/demo/src/scss/style.scss
+++ b/utils/sugar1/demo/src/scss/style.scss
@@ -1,22 +1,16 @@
-@import "../../../index";
+@use "../../../index" as sugar;
 
-@include s-init();
+@include sugar.init();
 
-@include s-classes();
+@include sugar.classes();
 
-#fullscreen {
-  background-image: url(s-base64-icon(angle-left));
-  background-size: 10px;
+
+.user {
+  @include sugar.icon('fa-adjust', solid);
 }
 
 .coffeekraken-logo {
-  @include s-coffeekraken-logo(primary, secondary);
+  @include sugar.coffeekraken-logo(primary, secondary);
   background-size: cover;
   width: 300px;
-}
-
-.kraken {
-  background-image: url("../../dist/img/kraken.png");
-  width: 300px;
-  height: 300px;
 }
