--- a/utils/sugar1/src/scss/core/utils/_check-property.scss
+++ b/utils/sugar1/src/scss/core/utils/_check-property.scss
@@ -12,7 +12,7 @@
  *
  * @author 		Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
-@function check-property($property, $type, $value, $check-only: false) {
+@function _check-property($property, $type, $value, $check-only: false) {
   $required: false;
   // check if is a map
   @if meta.type-of($type) == map {
@@ -50,7 +50,7 @@
       // if its a list of values, check each values
       @if meta.type-of($value) == list {
         @each $v in $value {
-          @if not check-property($property, $type, $v, true) {
+          @if not _check-property($property, $type, $v, true) {
             @return false;
           }
         }
