--- a/utils/sugar1/src/scss/mixins/_fit.scss
+++ b/utils/sugar1/src/scss/mixins/_fit.scss
@@ -1,15 +1,17 @@
 /**
+ * @name      fit
  * Make the element fit his container.
+ *
  * @param 	{String} 			[$position=null] 		The position how to fit the element.
  *
  * @example 	scss
  * .my-cool-element {
- * 	\@include s-fit(absolute);
+ * 	\@include sugar.fit(absolute);
  * }
  *
  * @author 		Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
-@mixin s-fit($position: null) {
+@mixin fit($position: null) {
   width: 100%;
   height: 100%;
   @if $position {
