--- a/utils/sugar1/src/scss/mixins/_icon.scss
+++ b/utils/sugar1/src/scss/mixins/_icon.scss
@@ -1,20 +1,71 @@
+@use '../vendors/font-awesome/fontawesome' as font-awesome;
+@use '../core/variables' as sugar;
 /**
+ * @name      icon
  * Apply an icon on the element. This mixin support font-awesome and custom icons systems that have an icon name formated like "icon-{name}"
+ * The custom icon style if you pass as name "user" will extend %icon, %icon-user, .icon and .icon-user classes
+ *
  * @param 		{String} 		$name 		The icon name to apply
+ * @param     {Color}     [$color=null]    The color wanted for the icon
  *
  * @example 	scss
  * .my-cool-icon {
- * 	\@include s-icon(fa-user);
+ * 	\@include s-icon(fa-user, primary);
  * }
  *
  * @author 		Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
-@mixin s-icon($name) {
+@mixin icon($name, $color: null) {
+  @if $color {
+    $color: color($color);
+  }
   // if font-awesome
   @if str-slice($name, 1, 3) == "fa-" {
-    @extend %fa;
-    @extend %#{$name};
+    $fa-name: str-slice($name, 4);
+    $fa-style: null;
+
+    $splits: str-split($fa-name, '#');
+    @if list-length($splits) == 2 {
+      $fa-name: list-nth($splits, 1);
+      $fa-style: list-nth($splits, 2);
+    }
+
+    @extend %fa-icon;
+
+    @if $fa-style {
+      @if $fa-style == regular {
+        @extend .far;
+      } @else if $fa-style == solid {
+        @extend .fas;
+      } @else if $fa-style == brands {
+        @extend .fab;
+      }
+    } @else {
+      @extend .far;
+    }
+    $fa-variables-map: module-variables('font-awesome');
+    @if $color {
+      color: $color;
+    }
+    &:before {
+      content: font-awesome.fa-content( map-get($fa-variables-map, 'fa-var-#{$fa-name}') );
+    }
+  } @else if str-slice($name, 1, 4) == 'svg-' {
+    $svg-name: str-slice($name, 5);
+    @if map-get(sugar.$svg-icons, $svg-name) == null {
+      @error('The svg icon named #{$svg-name} does not exist. You need to register it first using the mixin "sugar.register-svg-icon"');
+    }
+    $svg-code: map-get(sugar.$svg-icons, $svg-name);
+    // if has a color passed
+    @if $color {
+      $svg-code: str-replace($svg-code, '<svg', '<svg style="fill:%color"');
+      $svg-code: str-replace($svg-code, '%color', '#{$color}');
+    }
+    background: to-base64-url('#{$svg-code}');
   } @else {
+    @if $color {
+      color: $color;
+    }
     @extend %icon !optional;
     @extend %icon-#{$name} !optional;
     @extend .icon !optional;
