--- a/utils/sugar1/src/scss/mixins/_list-bullet.scss
+++ b/utils/sugar1/src/scss/mixins/_list-bullet.scss
@@ -1,5 +1,7 @@
 /**
+ * @name      list-bullet
  * Set how the list bullet has to be displayed.
+ *
  * @param 		{String} 		[$type=null] 				The list type to use. Can be all the list-style-type values
  * @param 		{Url} 			[$image=null] 				An image url to use as bullet
  * @param 		{String} 		[$icon=null] 				An icon name to use as bullet. Will use the s-icon mixin under the hood
@@ -11,7 +13,7 @@
  *
  * @example 	scss
  * .my-cool-list__item {
- * 	@\include s-list-bullet(
+ * 	@\include sugar.list-bullet(
  * 		$image : '../img/my-cool-bullet.svg',
  * 		$offset : 5px 10px,
  * 		$size : 1em,
@@ -21,57 +23,55 @@
  *
  * @author 		Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
-@mixin s-list-bullet(
+@mixin list-bullet(
   $type: null,
   $image: null,
   $icon: null,
-  $color: s-color(default),
+  $color: color(default),
   $size: null,
   $offset: null,
   $font: null,
   $space: null
 ) {
-  @if $_sugar-test-arguments {
-    $type: s-test-argument(
-      "s-list-bullet",
-      "type",
-      (
-        disc,
-        circle,
-        square,
-        decimal,
-        decimal-leading-zero,
-        lower-roman,
-        upper-roman,
-        lower-greek,
-        lower-latin,
-        upper-latin,
-        armenian,
-        georgian,
-        lower-alpha,
-        upper-alpha,
-        none
-      ),
-      $type
-    );
-    $image: s-test-argument("s-list-bullet", "image", url, $image);
-    $icon: s-test-argument("s-list-bullet", "icon", string, $icon);
-    $color: s-test-argument("s-list-bullet", "color", color, $color);
-    $size: s-test-argument(
-      "s-list-bullet",
-      "size",
-      "list-number|number",
-      $size
-    );
-    $offset: s-test-argument(
-      "s-list-bullet",
-      "offset",
-      "list-number|number",
-      $offset
-    );
-    $font: s-test-argument("s-list-bullet", "font", map, $font);
-    $space: s-test-argument("s-list-bullet", "space ", number, $space);
-  }
+  $type: test-argument(
+    "sugar.list-bullet",
+    "type",
+    (
+      disc,
+      circle,
+      square,
+      decimal,
+      decimal-leading-zero,
+      lower-roman,
+      upper-roman,
+      lower-greek,
+      lower-latin,
+      upper-latin,
+      armenian,
+      georgian,
+      lower-alpha,
+      upper-alpha,
+      none
+    ),
+    $type
+  );
+  $image: test-argument("sugar.list-bullet", "image", url, $image);
+  $icon: test-argument("sugar.list-bullet", "icon", string, $icon);
+  $color: test-argument("sugar.list-bullet", "color", color, $color);
+  $size: test-argument(
+    "sugar.list-bullet",
+    "size",
+    "list-number|number",
+    $size
+  );
+  $offset: test-argument(
+    "sugar.list-bullet",
+    "offset",
+    "list-number|number",
+    $offset
+  );
+  $font: test-argument("sugar.list-bullet", "font", map, $font);
+  $space: test-argument("sugar.list-bullet", "space ", number, $space);
 
   // padding
   @if $space {
@@ -90,9 +90,9 @@
     @if $offset {
       $left: 0;
       $top: 0;
-      @if length($offset) == 2 {
-        $left: nth($offset, 2);
-        $top: nth($offset, 1);
+      @if list-length($offset) == 2 {
+        $left: list-nth($offset, 2);
+        $top: list-nth($offset, 1);
       } @else if type-of($offset) == number {
         $top: $offset;
       }
@@ -105,14 +105,14 @@
       color: $color !important;
     }
     @if $size {
-      @if $image and type-of($size) == list and length($size) == 2 {
-        background-size: nth($size, 1) nth($size, 2);
+      @if $image and type-of($size) == list and list-length($size) == 2 {
+        background-size: list-nth($size, 1) list-nth($size, 2);
       } @else if type-of($size) == number {
         font-size: $size !important;
       }
     }
     @if $font {
-      @include s-font($font...);
+      @include font($font...);
     }
   }
 
@@ -138,7 +138,7 @@
     }
   } @else if $icon {
     position: relative;
-    @include s-icon($icon);
+    @include icon($icon);
   }
 
   // reset margin-left for nested lists
