--- a/utils/sugar1/src/scss/mixins/_list.scss
+++ b/utils/sugar1/src/scss/mixins/_list.scss
@@ -1,16 +1,22 @@
 /**
+ * @name    list
  * Start a new list
+ *
  * @param 		{String} 		[$counter-reset=s-list] 		A counter name to reset
+ *
+ * @example     scss
+ * .my-cool-list {
+ *    sugar.list();
+ * }
+ *
  * @author 		Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
-@mixin s-list($counter-reset: s-list) {
-  @if $_sugar-test-arguments {
-    $counter-reset: s-test-argument(
-      "s-list",
-      "counter-reset",
-      string,
-      $counter-reset
-    );
-  }
+@mixin list($counter-reset: s-list) {
+  $counter-reset: test-argument(
+    "sugar.list",
+    "counter-reset",
+    string,
+    $counter-reset
+  );
   counter-reset: $counter-reset;
 }
