--- a/utils/sugar1/src/scss/mixins/_position.scss
+++ b/utils/sugar1/src/scss/mixins/_position.scss
@@ -1,4 +1,5 @@
 /**
+ * @name      position
  * Set a complexe position styling like position:absolute; top:0; left:100%; etc...
  * This mixin gives you some shortcuts to align your element top, bottom, middle, center, etc...
  *
@@ -14,9 +15,9 @@
  * @example
  * .my-cool-element {
  * 	// absolute top right
- * 	\@include s-position(absolute, top, right);
+ * 	\@include sugar.position(absolute, top, right);
  * 	// custom right and bottom values
- * 	\@include s-position(absolute,
+ * 	\@include sugar.position(absolute,
  * 		$bottom : 20px,
  * 		$right : 20px
  * 	);
@@ -25,7 +26,7 @@
  *
  * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
-@mixin s-position(
+@mixin position(
   $position,
   $vertical-align: top,
   $align: left,
@@ -36,7 +37,7 @@
   $z: null
 ) {
   // get map
-  $map: s-position-map(
+  $map: position-map(
     $position: $position,
     $vertical-align: $vertical-align,
     $align: $align,
