--- a/layout/gridle/src/scss/_generate.scss
+++ b/layout/gridle/src/scss/_generate.scss
@@ -1,7 +1,16 @@
 /**
+ * @name      classes
+ * @namespace     gridle
+ * @type    Mixin
+ *
  * Generate the classes
+ *
+ * @example     scss
+ * @include gridle.classes();
+ *
+ * @author 		Olivier Bossel <olivier.bossel@gmail.com>
  */
-@mixin g-classes() {
+@mixin classes() {
 
   /**
    * Container
@@ -32,7 +41,7 @@
    */
   .gr--flex {
     display: flex;
-    margin: 0 calc(#{g-gutters(1)} / 2 * -1);
+    margin: 0 calc(#{gutters(1)} / 2 * -1);
   }
 
   /**
@@ -57,12 +66,12 @@
     grid-row-gap: var(--g-gutter-unit);
 
     &.gr--flex {
-      margin-top: calc(#{g-gutters(1)} / 2 * -1);
-      margin-bottom: calc(#{g-gutters(1)} / 2 * -1);
+      margin-top: calc(#{gutters(1)} / 2 * -1);
+      margin-bottom: calc(#{gutters(1)} / 2 * -1);
     }
 
     &.gr--flex > .col {
-      margin: calc(#{g-gutters(1)} / 2);
+      margin: calc(#{gutters(1)} / 2);
     }
   }
   .gr--no-gutter {
@@ -80,12 +89,12 @@
     grid-row-gap: 0;
 
     &.gr--flex {
-      margin-left: calc(#{g-gutters(1)} / 2 * -1);
-      margin-right: calc(#{g-gutters(1)} / 2 * -1);
+      margin-left: calc(#{gutters(1)} / 2 * -1);
+      margin-right: calc(#{gutters(1)} / 2 * -1);
     }
 
     &.gr--flex > .col {
-      margin: 0 calc(#{g-gutters(1)} / 2);
+      margin: 0 calc(#{gutters(1)} / 2);
     }
   }
   .gr--gutters-updown {
@@ -93,12 +102,12 @@
     grid-row-gap: var(--g-gutter-unit);
 
     &.gr--flex {
-      margin-top: calc(#{g-gutters(1)} / 2 * -1);
-      margin-bottom: calc(#{g-gutters(1)} / 2 * -1);
+      margin-top: calc(#{gutters(1)} / 2 * -1);
+      margin-bottom: calc(#{gutters(1)} / 2 * -1);
     }
 
     &.gr--flex > .col {
-      margin: calc(#{g-gutters(1)} / 2) 0;
+      margin: calc(#{gutters(1)} / 2) 0;
     }
   }
   .gr--no-gutter-side {
@@ -129,18 +138,18 @@
   }
 
   // process each states
-  @each $stateName in g-states-names() {
-    @include g-state($stateName) {
-      
+  @each $stateName in states-names() {
+    @include state($stateName) {
+
       /**
        * Apply the settings through variables
        */
       :root {
         /* Grid proportions */
-        --g-width: #{g-state-var(width, $stateName)};
-        --g-column-width: #{g-state-var(column-width, $stateName)};
-        --g-columns: #{g-state-var(columns, $stateName)};
-        --g-rows: #{g-state-var(rows, $stateName)};
+        --g-width: #{state-var(width, $stateName)};
+        --g-column-width: #{state-var(column-width, $stateName)};
+        --g-columns: #{state-var(columns, $stateName)};
+        --g-rows: #{state-var(rows, $stateName)};
 
         /* Grid logic */
         --g-gutters: calc(var(--g-columns) - 1);
@@ -151,40 +160,40 @@
 
         /* Container Units */
         --g-column-unit: calc(var(--g-column-proportion) * var(--g-container-width));
-        @if g-state-var(gutter-width, $stateName) {
-          --g-gutter-unit: #{g-state-var(gutter-width, $stateName)};
+        @if state-var(gutter-width, $stateName) {
+          --g-gutter-unit: #{state-var(gutter-width, $stateName)};
         } @else {
           --g-gutter-unit: calc(var(--g-gutter-proportion) * var(--g-container-width));
         }
         --g-column-and-gutter-unit: calc(var(--g-column-unit) + var(--g-gutter-unit));
 
         /* Container Width */
-        --g-container-width: #{g-state-var(container-width, $stateName)};
-        --g-container-max-width: #{g-state-var(container-max-width, $stateName)};
+        --g-container-width: #{state-var(container-width, $stateName)};
+        --g-container-max-width: #{state-var(container-max-width, $stateName)};
       }
 
       /**
        * Row wrap and nowrap
        */
-      #{g-process-selector('.gr--wrap\\@#{$stateName}')} {
+      #{process-selector('.gr--wrap\\@#{$stateName}')} {
         flex-wrap: wrap;
       }
-      #{g-process-selector('.gr--nowrap\\@#{$stateName}')} {
+      #{process-selector('.gr--nowrap\\@#{$stateName}')} {
         flex-wrap: nowrap;
       }
 
       /**
        * Row alignements
        */
-      #{g-process-selector('.gr--start\\@#{$stateName}')} {
+      #{process-selector('.gr--start\\@#{$stateName}')} {
         align-content: start; // grid
         align-items: flex-start; // flex
       }
-      #{g-process-selector('.gr--middle\\@#{$stateName}')} {
+      #{process-selector('.gr--middle\\@#{$stateName}')} {
         align-content: center; // grid
         align-items: center; // flex
       }
-      #{g-process-selector('.gr--end\\@#{$stateName}')} {
+      #{process-selector('.gr--end\\@#{$stateName}')} {
         align-content: end; // grid
         align-items: flex-end; // flex
       }
@@ -192,92 +201,92 @@
       /**
        * Grid cells alignements
        */
-      #{g-process-selector('.col--start\\@#{$stateName}')} {
+      #{process-selector('.col--start\\@#{$stateName}')} {
         align-self: start;
 
         .gr--flex & {
           align-self: flex-start;
         }
       }
-      #{g-process-selector('.col--middle\\@#{$stateName}')} {
+      #{process-selector('.col--middle\\@#{$stateName}')} {
         align-self: center;
       }
-      #{g-process-selector('.col--end\\@#{$stateName}')} {
+      #{process-selector('.col--end\\@#{$stateName}')} {
         align-self: end;
 
         .gr--flex & {
           align-self: flex-end;
         }
       }
-      
+
       /**
        * Grid cells
        */
-      @for $i from 1 through g-state-var(columns) {
-        #{g-process-selector('.col--#{$i}\\@#{$stateName}')} {
+      @for $i from 1 through state-var(columns) {
+        #{process-selector('.col--#{$i}\\@#{$stateName}')} {
           grid-column-end: span $i;
 
           .gr--flex & {
             flex: 0 0 auto;
-            width: calc(100% / var(--g-columns) * #{$i} - #{g-gutters(1)}); 
-            flex-basis: calc(100% / var(--g-columns) * #{$i} - #{g-gutters(1)});
+            width: calc(100% / var(--g-columns) * #{$i} - #{gutters(1)});
+            flex-basis: calc(100% / var(--g-columns) * #{$i} - #{gutters(1)});
             margin: 0 calc(#{g-gutters(1)} / 2);
           }
           .gr--flex.gr--no-gutter &,
           .gr--flex.gr--no-gutter-side & {
-            width: calc(100% / var(--g-columns) * #{$i}); 
+            width: calc(100% / var(--g-columns) * #{$i});
             flex-basis: calc(100% / var(--g-columns) * #{$i});
           }
         }
-        #{g-process-selector('.col--start-#{$i}\\@#{$stateName}')} {
+        #{process-selector('.col--start-#{$i}\\@#{$stateName}')} {
           grid-column-start: #{$i};
-        } 
-        #{g-process-selector('.col--height-#{$i}\\@#{$stateName}')} {
-          height: calc(#{g-columns($i)} + #{g-gutters($i - 1)});
+        }
+        #{process-selector('.col--height-#{$i}\\@#{$stateName}')} {
+          height: calc(#{columns($i)} + #{gutters($i - 1)});
         }
       }
-      @for $i from 1 through g-state-var(rows) {
-        #{g-process-selector('.gr--rows-#{$i}\\@#{$stateName}')} {
+      @for $i from 1 through state-var(rows) {
+        #{process-selector('.gr--rows-#{$i}\\@#{$stateName}')} {
           grid-template-rows: repeat($i, 1fr);
         }
-        #{g-process-selector('.row--#{$i}\\@#{$stateName}')} {
+        #{process-selector('.row--#{$i}\\@#{$stateName}')} {
           grid-row-end: span $i;
         }
-        #{g-process-selector('.row--start-#{$i}\\@#{$stateName}')} {
+        #{process-selector('.row--start-#{$i}\\@#{$stateName}')} {
           grid-row-start: #{$i};
-        }   
+        }
       }
 
       /**
        * Flex grid cells
        */
-      #{g-process-selector('.col--adapt\\@#{$stateName}')} {
+      #{process-selector('.col--adapt\\@#{$stateName}')} {
         .gr--flex & {
           width: auto !important;
           flex-basis: auto !important;
           flex: 0 0 auto;
-          margin: 0 calc(#{g-gutters(1)} / 2);
+          margin: 0 calc(#{gutters(1)} / 2);
         }
       }
-      #{g-process-selector('.col--grow\\@#{$stateName}')} {
+      #{process-selector('.col--grow\\@#{$stateName}')} {
         .gr--flex & {
           width: auto !important;
           flex-basis: auto !important;
           flex: 1 1 auto;
-          margin: 0 calc(#{g-gutters(1)} / 2);
+          margin: 0 calc(#{gutters(1)} / 2);
         }
       }
 
       /**
        * Utilities
        */
-      #{g-process-selector('.hide\\@#{$stateName}')} {
+      #{process-selector('.hide\\@#{$stateName}')} {
         display: none;
       }
-      #{g-process-selector('.show\\@#{$stateName}')} {
+      #{process-selector('.show\\@#{$stateName}')} {
         display: block;
       }
-      #{g-process-selector('.show-inline\\@#{$stateName}')} {
+      #{process-selector('.show-inline\\@#{$stateName}')} {
         display: inline-block;
       }
     }
