--- a/webcomponent/select-webcomponent/demo/src/scss/style.scss
+++ b/webcomponent/select-webcomponent/demo/src/scss/style.scss
@@ -11,4 +11,4 @@
 @include sugar.classes();
 
 
-@include select-webcomponent.classes($colors: default primary secondary);
+@include select-webcomponent.classes-bare();
