--- a/layout/code-playground/src/scss/05_pages/_all.scss
+++ b/layout/code-playground/src/scss/05_pages/_all.scss
@@ -2,5 +2,6 @@
  * Pages
  * All the pages level specific styling.
  */
+@import 'encrypt-url';
 @import 'loading';
-@import 'noAppSpecified';
+@import 'error';
