--- a/layout/code-playground/src/scss/07_objects/_all.scss
+++ b/layout/code-playground/src/scss/07_objects/_all.scss
@@ -6,6 +6,8 @@
 @import 'btn',
 		'coffeekraken-logo',
 		'dropdown',
+		'form',
 		'golden-layout',
 		'notification',
+		'text-intro',
 		'tooltip';
