--- a/layout/code-playground/src/views/layouts/main.handlebars
+++ b/layout/code-playground/src/views/layouts/main.handlebars
@@ -13,26 +13,91 @@
 		</script>
 	{{/if}}
 
-	<title>{{title}}</title>
-	{{#if packageJson.description}}
-		<meta name="description" content="{{packageJson.description}}" />
-	{{/if}}
-	{{#if packageJson.keywords}}
-		<meta name="keywords" content="{{packageJson.keywords}}" />
-	{{/if}}
-	{{#if packageJson.repository}}
-		<link rel="canonical" href="{{packageJson.repository.url}}" />
-	{{/if}}
+	<title>Coffeekraken Code Playground</title>
+	<meta name="description" content="Simple to use interface to code demos and preview of your packages." />
+	<meta name="keywords" content="coffeekraken,coffee,kraken,code,playground,code-playground,editors,codemirror,sass,scss,js" />
 	<link rel="stylesheet" href="/dist/css/style.css" />
 </head>
 <body>
 
-  {{{body}}}
+  <header class="header">
+    <div class="gr gr--flex gr--middle">
+      <div class="col col--adapt bkg-primary">
+        <div class="header__logo">
+          {{#if logo}}
+            <img style="height:25px;" class="inline-block" src="/{{logo}}" />
+          {{else}}
+            <a href="http://coffeekraken.io" title="Coffeekraken.io" target="_blank">
+              <div style="width:80px;" class="coffeekraken-logo coffeekraken-logo--white"></div>
+            </a>
+          {{/if}}
+        </div>
+      </div>
+      <div class="col col--adapt">
+        <h1 class="h5 header__title" id="title" intro="letters-in-reveal">
+					Coffeekraken Code Playground
+        </h1>
+      </div>
+      {{#if demos}}
+        <div class="col col--adapt">
+          <div class="header__demos">
+            <div class="dropdown dropdown--primary">
+              <span class="demos-dropdown">
+                Demos&nbsp;&nbsp;<ck-icon icon="fas fa-caret-down"></ck-icon>
+              </span>
+              <div class="dropdown__menu">
+                <div class="dropdown__item">
+                  <a href="?" title="{{this.title}}">
+                    Default
+                  </a>
+                </div>
+                {{#each demos}}
+                  <div class="dropdown__item">
+                    <a href="?demo={{@key}}" title="{{this.title}}">
+                      {{this.title}}
+                    </a>
+                  </div>
+                {{/each}}
+              </div>
+            </div>
+          </div>
+        </div>
+      {{/if}}
+      <div class="col col--grow">
+      </div>
+      <div class="col col--adapt">
+        <ul class="nav nav--topbar" id="top-links">
+
+        </ul>
+      </div>
+    </div>
+  </header>
+
+	<div id="content">
+  	{{{body}}}
+	</div>
+
+	<footer class="footer">
+    <div class="gr gr--middle">
+      <div class="col col--6">
+        <div class="s-small">
+          Copyright &copy; <a href="http://coffeekraken.io" class="link" title="Coffeekraken">Coffeekraken</a> - Powered by <a class="link" href="https://github.com/coffeekraken/code-playground" target="_blank">Code Playground</a>
+        </div>
+        <div class="s-small">
+          Distributed under <a href="https://opensource.org/licenses/MIT" class="link" title="MIT license">MIT license</a>
+        </div>
+      </div>
+      <div class="col col--6 t-right">
+        <a href="http://coffeekraken.io" title="Coffeekraken.io" target="_blank">
+          <div style="width:60px;" class="coffeekraken-logo coffeekraken-logo--footer"></div>
+        </a>
+      </div>
+    </div>
+  </footer>
 
 	<script>
 		window.app = {
-			pwd : '{{pwd}}',
-			compileServer : '{{{compileServerSettings}}}'
+			compileServer : '{{{compileServer}}}'
 		};
 	</script>
 	<script src="/dist/js/browser/app.bundle.js"></script>
