--- a/layout/code-playground/src/scss/07_objects/_coffeekraken-logo.scss
+++ b/layout/code-playground/src/scss/07_objects/_coffeekraken-logo.scss
@@ -7,6 +7,13 @@
 	);
 	max-width:120px;
 }
+.coffeekraken-logo--title {
+	@include sugar.coffeekraken-logo(
+		$color : sugar.color(secondary),
+		$accent : #fff
+	);
+	max-width:120px;
+}
 .coffeekraken-logo--white {
 	@include sugar.coffeekraken-logo(
 		$color : white,
