--- a/layout/starter-kit/src/scss/03_generic/_gridle.scss
+++ b/layout/starter-kit/src/scss/03_generic/_gridle.scss
@@ -2,4 +2,4 @@
  * Gridle classes generation
  * For documentation : https://www.npmjs.com/package/@coffeekraken/gridle
  */
-@include g-classes();
+@include gridle.classes();
