--- a/framework/squid/.resources/bundledcss.scss
+++ b/framework/squid/.resources/bundledcss.scss
@@ -72,6 +72,11 @@
  * An organism can contain other molecules or atoms and does not have to relay on his ancestors
  * to be properly displayed.
  */
+.view {
+  min-height: 100vh;
+  background: red;
+}
+
 
 
 /**
