--- a/framework/squid/src/css/06_organisms/_view.scss
+++ b/framework/squid/src/css/06_organisms/_view.scss
@@ -1,4 +1,33 @@
 .view {
-  min-height: 100vh;
-  background: red;
+  min-height: 50vh;
+  transition: all .5s ease-in-out;
+  position: relative;
+}
+
+.view--loaded {
+  min-height: 0;
+  opacity: 1;
+}
+
+.view__content {
+  opacity: 1;
+
+  .view--loading & {
+    opacity: 0;
+  }
+}
+
+.view__loader {
+  @include sugar.loader-couch-potato();
+  @include sugar.position(absolute, middle, center);
+  opacity: 0;
+  transition: all .5s ease-in-out;
+
+  .view--loading & {
+    opacity: 1;
+    transform: scale(1);
+  }
+  .view--loaded & {
+    transform: scale(2);
+  }
 }
