--- a/util/sugar/src/scss/color/_color-hue.scss
+++ b/util/sugar/src/scss/color/_color-hue.scss
@@ -1,4 +1,3 @@
-@use 'sass:color';
 /**
  * @name    color-hue
  * @namespace     sugar.scss.color
@@ -21,5 +20,5 @@
       $color
     );
   }
-  @return color.hue($color);
+  @return hue($color);
 }
