--- a/util/sugar/src/scss/color/_color-opacity.scss
+++ b/util/sugar/src/scss/color/_color-opacity.scss
@@ -1,4 +1,3 @@
-@use 'sass:color';
 /**
  * @name    color-opacity
  * @namespace     sugar.scss.color
@@ -21,5 +20,5 @@
       $color
     );
   }
-  @return color.opacity($color);
+  @return opacity($color);
 }
