--- a/util/sugar/src/scss/color/_color-saturation.scss
+++ b/util/sugar/src/scss/color/_color-saturation.scss
@@ -1,4 +1,3 @@
-@use 'sass:color';
 /**
  * @name    color-saturation
  * @namespace     sugar.scss.color
@@ -21,5 +20,5 @@
       $color
     );
   }
-  @return color.saturation($color);
+  @return saturation($color);
 }
