--- a/util/sugar/tests/index.scss
+++ b/util/sugar/tests/index.scss
@@ -1,5 +1,8 @@
 @use '../index' as Sugar;
 
+@include Sugar.init-classes();
+@include Sugar.classes();
+
 body {
   @include Sugar.coffeekraken-logo();
 }
